@@ -1,4 +1,11 @@
-<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-06-07'>2022-06-07</h3>
+<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-07-12'>2022-07-12</h3>
+<p>Update Upbit OPEN API</p>
+
+<ul>
+<li>Upbit OPEN API Version 1.3.2 업데이트 반영</li>
+<li>QUOTATION API 파라미터 조회 시 예외가 발생하는 <a href="https://github.com/uJhin/upbit-client/issues/46">이슈사항</a> 수정 및 반영</li>
+</ul>
+<h3 id='2022-06-07'>2022-06-07</h3>
 <p>Upbit Client released: v1.3.1.1</p>
 
 <ul>
